style/modules/_sidebar.scss
// main: ../main.scss

@import "../_utils/vars";
@import "../_utils/mixins";
@import "../components/cards";
@import "../components/buttons";

.side,
.side:not(#searchexpando),
.side:not(#search_hidemore) {
	@include transition-default;
}

// hide sidebar items
.side * {
	opacity: 0;
}

.side {
	// float: right;
	background-color: transparent;
	height: 0;
	width: 0;
	margin: 0 em(15, 10) 0 0;
	padding-top: em(85, 10);

	.spacer {
		margin: 0 0 em(15, 10);

		&:first-of-type {
			position: relative;
			top: em(-85, 10);
			height: 0;
			width: 0;
		}
	}

	// kebab menu
	&:before {
    content: "";
    display: block;
    height: em(36, 10);
    width: em(36, 10) + 1.5em;
    opacity: 0.25;
    position: fixed;
    right: 0;
    top: em(215, 10);
    background: url(%%kebab%%) no-repeat;
		@include transition-default;
	}

	&:hover {
		height: 100%;
		width: em(330, 10);
		margin-left: 0;

		// show hidden sidebar items
		*:not(.arrow) {
			opacity: 1;
		}

		// make kebab disappear on hover
		&:before {
			opacity: 0;
		}

		// change width of submit buttons on sidebar hover
		.submit-link,
		.submit-text {
			width: em(143, 10);
		}

		// change width of first card (containing search and submit) on sidebar hover
		.spacer:first-of-type {
			height: em(39, 10);
			width: em(300, 10);
		}
	}

	// place cards beneath sidebar boxes
	.spacer:first-of-type,
	#ad_sponsorship,
	.titlebox,
	#moderation_tools,
	#ad_main,
	.sidecontentbox {
		font-size: 100%;
		@include animate-card;
	}

	// search
	@import "sidebar/search";

	// sponsorship box
	#ad_sponsorship,
	#login_login-main {
		position: relative;
		top: em(-84, 10);
	}

	// submit buttons
	@import "sidebar/submit";

	// hide create subreddit button and account activity div
	.sidebox.create,
	.account-activity-box {
		display: none;
	}

	// login form
	@import "sidebar/login";

	// titlebox
	@import "sidebar/titlebox";

	// sidecontentbox
	@import "sidebar/sidecontentbox";

	// advertisement
	#ad_main {
		position: relative;
	}
}

@media (min-width: $screen-md-min) {
	.side {
		height: 100%;
		width: em(330, 10);

		* {
			opacity: 1;
		}

		// hide kebab menu icon
		&:before {
			display: none;
		}

		// change width of first card (containing search and submit)
		.spacer:first-of-type {
			position: relative;
			top: em(-85, 10);
			right: 0;
			height: em(39, 10);
			width: em(300, 10);
		}

		#search {
			width: 30em;
		}

		.submit-link,
		.submit-text {
			width: em(143, 10);
		}
	}
}

